Don't pipeline any DMA writes to eMMC.

Fixes PR/49463.